autoops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    argocd.argoproj.io/instance: autoops-ai
  name: autoops-ai-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.autoops-ai.cloud
      secretName: autoops-ai-tls
  rules:
    - host: app.autoops-ai.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoops-ai-lb
                port:
                  number: 80
